feat: add main html structure

--- a/index.html
+++ b/index.html
@@ -11,6 +11,127 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <article class="main-container">
+    <nav>
+        <div class="menu">
+            <ul class="menu-list">
+                <li class="menu-item"><a href="#contacts" class="menu-link">Contacts</a></li>
+                <li class="menu-item"><a href="#projects" class="menu-link">Projects</a></li>
+                <li class="menu-item"><a href="#languages" class="menu-link">Languages</a></li>
+                <li class="menu-item"><a href="#aboutme" class="menu-link">About Me</a></li>
+                <li class="menu-item"><a href="#skills" class="menu-link">Skills</a></li>
+                <li class="menu-item"><a href="#education" class="menu-link">Education</a></li>
+                <li class="menu-item"><a href="#code" class="menu-link">Code</a></li>
+                <li class="menu-item"><a href="#experience" class="menu-link">Experience</a></li>
+            </ul>
 
+        </div>
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </nav>
+    <div class="sidebar">
+
+        <img src="Ema.png" alt="My photo" class="photo">
+
+        <div class="contacts" id="contacts">
+            <h3> <img src="icons/icons8-contacts.svg" alt="contacts" class="sidebar-icons"> My contact info</h3>
+            <ul class ="contacts-list">
+                <li>Address: Krakow, Malopolskie, Poland</li>
+                <li>E-mail: <a href="mailto:cielvibritania@gmail.com">cielvibritania@gmail.com</a></li>
+                <li>Phone: <a href="tel:48516793795">+48615793795</a></li>
+                <li>GitHub: <a href="https://github.com/emamaksimava">EmaMaksimava</a></li>
+                <li>Telegram: <a href="https://web.telegram.org/k/">Emma Maksimava</a></li>
+                <li>Viber: <a href="tel:375297054772">+375297054772</a></li>
+            </ul>
+
+        </div>
+        <div class="projects" id="projects">
+            <h3> <img src="icons/project-management.svg" alt="projects" class="sidebar-icons"> My projects</h3>
+            <div class="projects-container">
+                <div class="projects-item">
+                    <a href="https://run-smart-pulse.netlify.app/"target="_blank">
+                    <img src="img/smartPulse.jpg" alt="smartPulse"></a>
+                    <h5>Smart-Pulse</h5>
+                    <p>HTML, CSS(Scss), JS</p>
+                </div>
+                <div class="projects-item">
+                    <a href="https://uberpartners.netlify.app/"target="_blank"> <img src="img/uber.jpg" alt="uber"> </a>
+                    <h5>UBER</h5>
+                    <p>HTML, CSS(Sass), JS</p>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="languages" id="languages">
+            <h3> <img src="icons/icons8-books.svg" alt="languages" class="sidebar-icons"> Languages</h3>
+            <h4>  English</h4>
+            <div class="languages-english">According to the last test of the level of English on the Streamline platform: Pre-Intermediate (CEFR A2 +). I also take English trainings on the BBC Learning English resource.</div>
+            <h4>  Polish</h4>
+            <div class="languages-polish">Know Polish at A1 level.</div>
+            <h4>  Russian</h4>
+            <div class="languages-russian">Russian is native.</div>
+        </div>
+    </div>
+    <main class="main">
+        <section class="about-me" id="aboutme">
+            <h1>Emma Maksimava</h1>
+            <h2>About me</h2>
+            <p class="about-me-info">I am 26. I am Belarusian, but now I live with my family in Poland, I have a higher medical education, but it so happened that I was fascinated by the IT sphere. I enjoy learning new technologies, integrating them into the experience I have already acquired. I consider the IT sphere one of the most promising in the coming years, and as a beginner I would also like to contribute to its development as a front-end developer.I already have a basic knowledge of HTML and CSS, a good basic knowledge of JavaScript, an introductory knowledge of React. I am currently taking courses on Udemy on JS + React/Redux. My strengths include patience, perseverance, organization, responsibility, punctuality. I have a friendly character and easily make contact with people, I will always answer a request for help.</p>
+
+        </section>
+        <section class="skills" id="skills">
+
+            <h2>Skills</h2>
+            <div class="skills-lists">
+                <div>
+                    <h3>Tech skills</h3>
+                    <ul class="skills-tech">
+                        <li class="link-html"> <img src="icons/html-5.svg" alt="html-5"> HTML</li>
+                        <li class="link-css"> <img src="icons/css.svg" alt="css-3"> CSS (Sass/Scss, Bootstrap, BEM)</li>
+                        <li class="link-js"> <img src="icons/js.svg" alt="js"> JavaScript(Fundamentals, DOM, ES6+, OOP)</li>
+                        <li class="link-git"> <img src="icons/git.svg" alt="git"> Version control: Git (basic knowledge)</li>
+                        <li class="link-gulp"> <img src="icons/gulp.svg" alt="gulp"> Module Bundlers: Gulp (basic knowledge)</li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>Soft skills</h3>
+                    <ul class="skills-soft">
+                        <li>Time management.</li>
+                        <li>Teamwork skills.</li>
+                        <li>Communication skills.</li>
+                        <li>Creative thinking.</li>
+                        <li>Emotional intelligence.</li>
+                        <li>Memory and attention.</li>
+                    </ul>
+                </div>
+
+            </div>
+        </section>
+        <section class="education" id="education">
+            <h2>Education</h2>
+            <div class="education-info">I have a higher education. I took trainings at GoIT on HTML / CSS Basics, Python Basics. Successfully completed the online course on HTML and CSS with a certificate on Udemy. At the moment I'm taking courses on native JS with React and Vue frameworks. And I'm delighted to have a wonderful real-world coding experience at RS School at EPAM.</div>
+        </section>
+        <section class="examples" id="code">
+            <h2>Code Example</h2>
+            <div class="examples-code">
+                <img src="img/code.png" alt="code">
+            </div>
+        </section>
+        <section class="experience" id="experience">
+            <h2>Work experience</h2>
+            <div class="experience-info">So far I have no experience as a developer, but I wrote small projects(mainly landing pages) according to the program IT courses.</div>
+        </section>
+    </main>
+
+</article>
+<footer>
+    <div><a href="https://github.com/EmaMaksimava"><img src="icons/iconmonstr-github-1.svg" alt="github" class="footer-github"></a></div>
+    <div><a href="https://rs.school/js/"><img src="icons/rs_school-og.png" alt="rs-school" class="footer-rs-school"></a></div>
+    <div class="footer-info"> Created in 2022</div>
+</footer>
 </body>
 </html>
