refactor: change some text info

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <section class="about-me" id="aboutme">
             <h1>Emma Maksimava</h1>
             <h2>About me</h2>
-            <p class="about-me-info">I am 26. I am Belarusian, but now I live with my family in Poland, I have a higher medical education, but it so happened that I was fascinated by the IT sphere. I enjoy learning new technologies, integrating them into the experience I have already acquired. I consider the IT sphere one of the most promising in the coming years, and as a beginner I would also like to contribute to its development as a front-end developer.I already have a basic knowledge of HTML and CSS, a good basic knowledge of JavaScript, an introductory knowledge of React. I am currently taking courses on Udemy on JS + React/Redux. My strengths include patience, perseverance, organization, responsibility, punctuality. I have a friendly character and easily make contact with people, I will always answer a request for help.</p>
+            <p class="about-me-info">I am 27. I am Belarusian, but now I live with my family in Poland, I have a higher medical education, but it so happened that I was fascinated by the IT sphere. I enjoy learning new technologies, integrating them into the experience I have already acquired. I consider the IT sphere one of the most promising in the coming years, and as a beginner I would also like to contribute to its development as a front-end developer.I already have a basic knowledge of HTML and CSS, a good basic knowledge of JavaScript, an introductory knowledge of React. I am currently taking courses on Udemy on JS + React/Redux. My strengths include patience, perseverance, organization, responsibility, punctuality. I have a friendly character and easily make contact with people, I will always answer a request for help.</p>
 
         </section>
         <section class="skills" id="skills">
@@ -90,9 +90,9 @@
                 <div>
                     <h3>Tech skills</h3>
                     <ul class="skills-tech">
-                        <li class="link-html"> <img src="icons/html-5.svg" alt="html-5"> HTML</li>
-                        <li class="link-css"> <img src="icons/css.svg" alt="css-3"> CSS (Sass/Scss, Bootstrap, BEM)</li>
-                        <li class="link-js"> <img src="icons/js.svg" alt="js"> JavaScript(Fundamentals, DOM, ES6+, OOP)</li>
+                        <li class="link-html"> <img src="icons/html-5.svg" alt="html-5"> HTML (HTML5)</li>
+                        <li class="link-css"> <img src="icons/css.svg" alt="css-3"> CSS (Sass/Scss, Bootstrap, Flex, Grid, CSS3)</li>
+                        <li class="link-js"> <img src="icons/js.svg" alt="js"> JavaScript(Fundamentals, DOM, ES6+, OOP, React)</li>
                         <li class="link-git"> <img src="icons/git.svg" alt="git"> Version control: Git (basic knowledge)</li>
                         <li class="link-gulp"> <img src="icons/gulp.svg" alt="gulp"> Module Bundlers: Gulp (basic knowledge)</li>
                     </ul>
