feat: add pictures for cv

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </nav>
     <div class="sidebar">
 
-        <img src="Ema.png" alt="My photo" class="photo">
+        <img src="IMG_8344.jpg" alt="My photo" class="photo">
 
         <div class="contacts" id="contacts">
             <h3> <img src="icons/icons8-contacts.svg" alt="contacts" class="sidebar-icons"> My contact info</h3>
@@ -126,12 +126,12 @@
             <div class="experience-info">So far I have no experience as a developer, but I wrote small projects(mainly landing pages) according to the program IT courses.</div>
         </section>
     </main>
-
+    <footer>
+      <div><a href="https://github.com/EmaMaksimava"><img src="icons/iconmonstr-github-1.svg" alt="github" class="footer-github"></a></div>
+      <div><a href="https://rs.school/js/"><img src="icons/rs_school-og.png" alt="rs-school" class="footer-rs-school"></a></div>
+      <div class="footer-info"> Created in 2022</div>
+  </footer>
 </article>
-<footer>
-    <div><a href="https://github.com/EmaMaksimava"><img src="icons/iconmonstr-github-1.svg" alt="github" class="footer-github"></a></div>
-    <div><a href="https://rs.school/js/"><img src="icons/rs_school-og.png" alt="rs-school" class="footer-rs-school"></a></div>
-    <div class="footer-info"> Created in 2022</div>
-</footer>
+
 </body>
 </html>
