refactor: change theme color

--- a/index.html
+++ b/index.html
@@ -125,12 +125,13 @@
             <h2>Work experience</h2>
             <div class="experience-info">So far I have no experience as a developer, but I wrote small projects(mainly landing pages) according to the program IT courses.</div>
         </section>
+        <section class="footer">
+          <div><a href="https://github.com/EmaMaksimava"><img src="icons/iconmonstr-github-1.svg" alt="github" class="footer-github"></a></div>
+          <div><a href="https://rs.school/js/"><img src="icons/rs_school-og.png" alt="rs-school" class="footer-rs-school"></a></div>
+          <div class="footer-info"> Created in 2022</div>
+        </section>
     </main>
-    <footer>
-      <div><a href="https://github.com/EmaMaksimava"><img src="icons/iconmonstr-github-1.svg" alt="github" class="footer-github"></a></div>
-      <div><a href="https://rs.school/js/"><img src="icons/rs_school-og.png" alt="rs-school" class="footer-rs-school"></a></div>
-      <div class="footer-info"> Created in 2022</div>
-  </footer>
+
 </article>
 
 </body>
